# models/tables.go
@@ -1,0 +1,18 @@
+package models
+
+type Problem struct {
+	ProblemID  string      `form:"problem_id" json:"problem_id"`   // primary key
+	Title      string      `form:"title" json:"title"`             // problem title
+	Content    string      `form:"content" json:"content"`         // problem description
+	Difficulty string      `form:"difficulty" json:"difficulty"`   // easy mid hard
+	MaxRuntime int         `form:"max_runtime" json:"max_runtime"` // 时间限制
+	MaxMemory  int         `form:"max_memory" json:"max_memory"`   // 内存限制
+	TestCases  []*TestCase `form:"test_cases" json:"test_cases"`   // 测试样例集
+}
+
+// TestCase 测试样例
+type TestCase struct {
+	PID      int64  `form:"PID" json:"PID"`           // 对应的题目ID
+	Input    string `form:"input" json:"input"`       // 输入
+	Expected string `form:"expected" json:"expected"` // 期望输出
+}
